[gd_scene load_steps=2 format=3 uid="uid://cahns5mqsn7le"]

[ext_resource type="Script" uid="uid://8ac1s2xk3u8x" path="res://scripts/main_menu.gd" id="1_l6cm7"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_l6cm7")

[node name="MenuContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -158.0
offset_right = 170.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 32

[node name="JoinSubmenu" type="VBoxContainer" parent="MenuContainer/MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 8

[node name="RichTextLabel" type="RichTextLabel" parent="MenuContainer/MarginContainer/JoinSubmenu"]
clip_contents = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_stretch_ratio = 1.51
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/table_v_separation = 0
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 30
text = "Join
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MenuContainer/MarginContainer/JoinSubmenu"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TextEdit" type="TextEdit" parent="MenuContainer/MarginContainer/JoinSubmenu"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
placeholder_text = "User OID"

[node name="JoinOID" type="Button" parent="MenuContainer/MarginContainer/JoinSubmenu"]
layout_mode = 2
text = "Join Game"

[node name="Back" type="Button" parent="MenuContainer/MarginContainer/JoinSubmenu"]
layout_mode = 2
text = "Back"

[node name="HostSubmenu" type="VBoxContainer" parent="MenuContainer/MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 8

[node name="RichTextLabel" type="RichTextLabel" parent="MenuContainer/MarginContainer/HostSubmenu"]
clip_contents = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_stretch_ratio = 1.51
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/table_v_separation = 0
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 30
text = "Host"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MenuContainer/MarginContainer/HostSubmenu"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MenuContainer/MarginContainer/HostSubmenu"]
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="MenuContainer/MarginContainer/HostSubmenu/HBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Loading..."
editable = false

[node name="CopyOID" type="Button" parent="MenuContainer/MarginContainer/HostSubmenu/HBoxContainer"]
layout_mode = 2
text = "Copy"

[node name="Start" type="Button" parent="MenuContainer/MarginContainer/HostSubmenu"]
layout_mode = 2
disabled = true
text = "Awaiting opponent..."

[node name="Back" type="Button" parent="MenuContainer/MarginContainer/HostSubmenu"]
layout_mode = 2
text = "Back"

[node name="MainSubmenu" type="VBoxContainer" parent="MenuContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RichTextLabel" type="RichTextLabel" parent="MenuContainer/MarginContainer/MainSubmenu"]
clip_contents = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_stretch_ratio = 1.51
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/table_v_separation = 0
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 30
text = "Card Clash: Heroes
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MenuContainer/MarginContainer/MainSubmenu"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Host" type="Button" parent="MenuContainer/MarginContainer/MainSubmenu"]
layout_mode = 2
text = "Host Game"

[node name="Join" type="Button" parent="MenuContainer/MarginContainer/MainSubmenu"]
layout_mode = 2
text = "Join Game"

[node name="Exit" type="Button" parent="MenuContainer/MarginContainer/MainSubmenu"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MenuContainer/MarginContainer/JoinSubmenu/JoinOID" to="." method="_on_join_oid_pressed"]
[connection signal="pressed" from="MenuContainer/MarginContainer/HostSubmenu/HBoxContainer/CopyOID" to="." method="_on_copy_oid_pressed"]
[connection signal="pressed" from="MenuContainer/MarginContainer/MainSubmenu/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MenuContainer/MarginContainer/MainSubmenu/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="MenuContainer/MarginContainer/MainSubmenu/Exit" to="." method="_on_exit_pressed"]
